--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "ngx-accordion": "0.0.17",
         "ngx-bootstrap": "^2.0.0-beta.8",
         "ngx-pagination": "^3.0.3",
+        "node-sass": "^4.7.2",
         "primeng": "^5.0.0-rc.0",
         "rxjs": "^5.5.2",
         "typings": "^2.1.1",
